# opentelemetry-tracing-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
commons/: __init__.py  config.py  opentelemetry.py  otel.py  otel_marshmallow.py  smorest.py  sqlalchemy.py
models/: book.py
ressources/: book.py
tests/: conftest.py  test_book.py
